# gridtest

./: .gitignore  .gitmodules  AI-PERSONA.md  AI_PERSONA.md  BOOTSTRAP-GUIDE.md  BOOTSTRAP.md  CMakeLists.txt  INITIAL-MESSAGE.md  KANBAN_BACKLOG.md  KANBAN_COMPLETED.md  LICENSE  NOTES.md  PLAN.md  PROJECT-OVERVIEW.md  PROJECT_OVERVIEW.md  README.md  main.code-workspace
include/: actor.h  actor_array.h  actor_colour.h  array_macros.h  colour.h  command.h  command_array.h  command_processing_system.h  command_result.h  command_system.h  component.h  component_array.h  components.h  constants.h  game.h  log.h  renderer.h  tile.h  tile_array.h  tile_colour.h  tile_flags.h  tile_map.h  tile_prototype.h  tile_prototype_array.h  tile_prototype_repository.h  tile_prototype_repository_entry.h  tile_prototype_repository_entry_array.h  world.h
lib/: libraylib.so.5.5.0
res/: bitmap_font_0001.xcf  font_chars.txt
src/: actor.c  actor_array.c  actor_colour.c  command.c  command_array.c  command_processing_system.c  command_result.c  command_system.c  component.c  component_array.c  components.c  constants.c  game.c  log.c  main.c  renderer.c  tile.c  tile_array.c  tile_colour.c  tile_map.c  tile_prototype.c  tile_prototype_array.c  tile_prototype_repository.c  tile_prototype_repository_entry.c  tile_prototype_repository_entry_array.c  world.c
